fix: changed passwort visibility icon

--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -161,7 +161,7 @@
 			align-items: center;
 			justify-content: center;
 			transition: opacity 0.2s;
-
+			color: $board-border;
 			&:hover {
 				opacity: 0.7;
 			}
